# Web-Cam_proj

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  instruction.md  vcpkg.json
.agents/: setup-manager.md
.codex/skills/setup-development-environment/: SKILL.md
.codex/skills/setup-development-environment/agents/: openai.yaml
.codex/skills/setup-development-environment/references/: ubuntu-wsl2-cpp-setup.md
.codex/skills/setup-development-environment/scripts/: check_environment.sh
agent/: developer.md  reviewer.md  scrum-master.md  setup-manager.md
code/Client/src/: main.cpp
code/Common/include/camera/common/: build_info.h  command.h  error.h  video_policy.h
code/Common/src/: build_info.cpp  command.cpp  error.cpp  video_policy.cpp
code/Server/include/camera/server/: session_controller.h
code/Server/src/: main.cpp  session_controller.cpp
docs/: product-backlog.md  project-summary.md  requirements.md
docs/adr/: ADR-001-client-connection-policy.md  ADR-002-video-resolution-policy.md  ADR-003-server-technology-stack-transition.md
docs/sprints/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md
tests/integration/: server_session_controller_test.cpp
tests/unit/: common_build_info_test.cpp  common_command_test.cpp  common_error_test.cpp  common_video_policy_test.cpp
